fix: card spacing

--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -61,7 +61,7 @@ body {
     bottom: 2.635rem;
     font-size: 1.25rem;
     padding-left: 1.125rem;
-    letter-spacing: 3px;
+    letter-spacing: 1px;
     color: hsl(291deg 100% 97%);
 }
 
